# psbt-coordinator

./: .gitignore  Cargo.toml  README.md  final_tx.hex  key_a.json  key_b.json  key_c.json  signed_by_key_a.psbt.base64  signed_by_key_b.psbt.base64  unsigned.psbt  unsigned.psbt.base64
docs/: 01_foundations.md  02_keys_and_descriptors.md  03_psbt_construction.md  04_role_separation.md  05_psbt_combining.md
src/: lib.rs  main.rs
