[package]
name = "psbt-coordinator"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
bitcoin = { version = "0.32.8", features = ["rand-std"] }
miniscript = "13.0.0"
rand = "0.8"
secp256k1 = { version = "0.31.1", features = ["rand", "global-context"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
